--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <img class="avatar" src="https://avatars.githubusercontent.com/u/106602737?v=4">
         </div>
         <div style="display: inline-block;">
-            <h1>
-                <>Hildélio Júnior<>
+            <h1 align="center">
+                Hildélio Júnior
             </h1>
 
             <h2>
