acrescentando padding na div do topo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div style="display: inline-block; vertical-align: top;">
             <img class="avatar" src="https://avatars.githubusercontent.com/u/106602737?v=4">
         </div>
-        <div style="display: inline-block;">
+        <div class="TituloSub" style="display: inline-block;">
             <h1 align="center">
                 Hildélio Júnior
             </h1>
