--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                             Aula 09
 
                             </a>
+                        <li>
+                            <a href="https://github.com/hildelio/Trybe-Exercicios/tree/main/01-Fundamentos-de-Desenvolvimento/Bloco03_Introdu%C3%A7%C3%A3o_a_HTM_CSS/Exerc%C3%ADcio_Bonus"> Exercício Bonus</a>
+                        </li>
                     </ul>
             </ul>
 
