--- a/restcheiroderoça/cardapio.html
+++ b/restcheiroderoça/cardapio.html
@@ -87,7 +87,7 @@
                 
                 </h2>
 
-                <audio autoplay loop controls src="/images/audioyoutubestudio.mp3"></audio>    
+                <audio autoplay loop controls src="/restcheiroderoça/images/audioyoutubestudio.mp3"></audio>    
             </div>
         </div>
     </section>
