--- a/restcheiroderoça/index.html
+++ b/restcheiroderoça/index.html
@@ -60,8 +60,8 @@
                 <h2>
                     Aqui servimos felicidade!
                 </h2>
-                <video autoplay loop src="/images/aberturavd.mp4"></video>
-                <audio autoplay loop src="/images/deuseeu.mp3"></audio>
+                <video autoplay loop src="/restcheiroderoça/images/aberturavd.mp4"></video>
+                <audio autoplay loop src="/restcheiroderoça/images/deuseeu.mp3"></audio>
             </div>
         </div>
     </section>
