tirando o cedilha do link

--- a/restcheiroderoca/index.html
+++ b/restcheiroderoca/index.html
@@ -60,8 +60,8 @@
                 <h2>
                     Aqui servimos felicidade!
                 </h2>
-                <video autoplay loop src="/restcheiroderoça/images/aberturavd.mp4"></video>
-                <audio autoplay loop src="/restcheiroderoça/images/deuseeu.mp3"></audio>
+                <video autoplay loop src="/restcheiroderoca/images/aberturavd.mp4"></video>
+                <audio autoplay loop src="/restcheiroderoca/images/deuseeu.mp3"></audio>
             </div>
         </div>
     </section>
